--- a/style.css
+++ b/style.css
@@ -47,3 +47,9 @@
 #square3P{
     background-color: orange;
 }
+#submit_button{
+    width: 100px;
+    height: 50px;
+    background-color: deepskyblue;
+    color: white;
+}
